# tree-sitter-ebnf

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  extended-backus-naur-form.ebnf  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
corpus/: layout-comments.txt  sequences.txt
examples/: json.ebnf  json.highlight.html  toml.ebnf  toml.highlight.html
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: headings.txt  layout-comments.txt  sequences.txt  syntax-rules.txt  terminals.txt
