[package]
name = "tree-sitter-ebnf"
description = "This is a parser for the Extended Backus Naur Form "
version = "0.1.0"
authors = ["Shelton Louis <louisshelton0@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ebnf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/louiss0/tree-sitter-ebnf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
